--- a/plugins/sfForkedDoctrineApplyPlugin/i18n/ru/messages.xml
+++ b/plugins/sfForkedDoctrineApplyPlugin/i18n/ru/messages.xml
@@ -50,11 +50,11 @@
       </trans-unit>
       <trans-unit id="13" approved="yes">
         <source>The passwords did not match.</source>
-        <target>Пароли не совпадают..</target>
+        <target>Пароли не совпадают.</target>
       </trans-unit>
       <trans-unit id="14" approved="yes">
         <source>The email addresses did not match.</source>
-        <target>Email не совпадают..</target>
+        <target>Email не совпадают.</target>
       </trans-unit>
       <trans-unit id="15" approved="yes">
         <source>First name may not contain &lt;, &gt;, | or &amp;.</source>
