--- a/plugins/sfForkedDoctrineApplyPlugin/i18n/ru/sfForkedApply.xml
+++ b/plugins/sfForkedDoctrineApplyPlugin/i18n/ru/sfForkedApply.xml
@@ -21,7 +21,7 @@ Thanks again for joining us.
 &lt;/p&gt;&lt;p&gt;
 %2%
 &lt;/p&gt;&lt;p&gt;
-Ещё раз спасибо за то что присоеденились к нам!
+Ещё раз спасибо за то, что присоеденились к нам!
 &lt;/p&gt;
 </target>
       </trans-unit>
